[metadata]
name = clashofclansapi
version = 0.0.1
author = Luca Sebastian Koch
author_email = luca.sebastian.koch@gmail.com
description = This is an easy to use API of the game Clash of Clans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Acul747/Clash-of-Clans-API
project_urls =
    Bug Tracker = https://github.com/Acul747/Clash-of-Clans-API/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7s
setup_requires =
  requests>=2.2.0

[options.packages.find]
where = src